* add boolean in CellType * add test cases for InputConverter