@@ -3,9 +3,7 @@ package org.zkoss.zss.ngmodel.impl.sys;
 import java.util.Locale;
 
 import org.zkoss.poi.ss.format.Formatters;
-import org.zkoss.poi.ss.usermodel.Cell;
 import org.zkoss.poi.ss.usermodel.ErrorConstants;
-import org.zkoss.poi.ss.usermodel.ZssContext;
 import org.zkoss.zss.ngmodel.NCell;
 import org.zkoss.zss.ngmodel.NCell.CellType;
 import org.zkoss.zss.ngmodel.sys.input.InputParseContext;
@@ -42,22 +40,22 @@ public class InputConverter {
 			//bug #300:	Numbers in Text-cells are not treated as text (leading zero is removed)
 			if (formatStr != null) {
 				if (isStringFormat(formatStr)) { 
-					return new Object[] {new Integer(Cell.CELL_TYPE_STRING), txt}; //string
+					return new Object[] {CellType.STRING, txt}; //string
 				}
 			}
 			if (txt.startsWith("=")) {
 				if (txt.trim().length() > 1) {
-					return new Object[] {new Integer(Cell.CELL_TYPE_FORMULA), txt.substring(1)}; //formula 
+					return new Object[] {CellType.FORMULA, txt.substring(1)}; //formula 
 				} else {
-					return new Object[] {new Integer(Cell.CELL_TYPE_STRING), txt}; //string
+					return new Object[] {CellType.STRING, txt}; //string
 				}
 			} else if ("true".equalsIgnoreCase(txt) || "false".equalsIgnoreCase(txt)) {
-				return new Object[] {new Integer(Cell.CELL_TYPE_BOOLEAN), Boolean.valueOf(txt)}; //boolean
+				return new Object[] {CellType.BOOLEAN, Boolean.valueOf(txt)}; //boolean
 			} else if (txt.startsWith("#")) { //might be an error
 				final byte err = getErrorCode(txt);
 				return err < 0 ? 
-					new Object[] {Integer.valueOf(Cell.CELL_TYPE_STRING), txt}: //string
-					new Object[] {Integer.valueOf(Cell.CELL_TYPE_ERROR), new Byte(err)}; //error
+					new Object[] {CellType.STRING, txt}: //string
+					new Object[] {CellType.ERROR, new Byte(err)}; //error
 			} else {
 	            return parseEditTextToDoubleDateOrString(txt, locale); //ZSS-67
 			}
@@ -81,7 +79,7 @@ public class InputConverter {
 
 		try {
 			final Double val = Double.parseDouble(txt0);
-			return new Object[] {new Integer(Cell.CELL_TYPE_NUMERIC), val}; //double
+			return new Object[] {CellType.NUMBER, val}; //double
 		} catch (NumberFormatException ex) {
 			return parseEditTextToDateOrString(txt, locale);
 		}
@@ -90,9 +88,9 @@ public class InputConverter {
 	private static Object[] parseEditTextToDateOrString(String txt, Locale locale) {
 		final Object[] results = dateInputMask.parseDateInput(txt, locale); 
 		if (results[0] instanceof String) { 
-			return new Object[] {new Integer(Cell.CELL_TYPE_STRING), results[0]}; //string
+			return new Object[] {CellType.STRING, results[0]}; //string
 		} else { //if (result[0] instanceof Date)
-			return new Object[] {Integer.valueOf(Cell.CELL_TYPE_NUMERIC), results[0], results[1]}; //date with format
+			return new Object[] {CellType.NUMBER, results[0], results[1]}; //date with format
 		}
 	}
 
